syntax = "proto3";

option csharp_namespace = "Users";

package accommodation;

service AccommodationGRPCService {
  rpc GetAccommodationGRPC (AccommodationId) returns (AccommodationGRPC);
  rpc DeleteAccwithoutHost (UserId) returns (Deleted);
}

message AccommodationId {
  string id = 1;
}
message AccommodationGRPC{
  string name = 1;
}
message UserId {
  string id = 1;
}
message Deleted {
  bool isDeleted = 1;
}